<?xml version="1.0" encoding="utf-8"?>

<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/nav_graph"

    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="ru.transferservis.app.ui.home.HomeFragment"
        android:label="@string/home_title">

        <action
            android:id="@+id/action_homeFragment_to_quoteFragment"
            app:destination="@id/quoteFragment" />

    </fragment>

    <fragment
        android:id="@+id/quoteFragment"
        android:name="ru.transferservis.app.ui.quote.QuoteFragment"
        android:label="@string/quote_result_title">

        <action
            android:id="@+id/action_quoteFragment_to_bookingFragment"
            app:destination="@id/bookingFragment" />

    </fragment>

    <fragment
        android:id="@+id/bookingFragment"
        android:name="ru.transferservis.app.ui.booking.BookingFragment"
        android:label="@string/booking_title">

        <action
            android:id="@+id/action_bookingFragment_to_orderSuccessFragment"
            app:destination="@id/orderSuccessFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="false" />

    </fragment>

    <fragment
        android:id="@+id/orderSuccessFragment"
        android:name="ru.transferservis.app.ui.success.OrderSuccessFragment"
        android:label="@string/order_success_title" />

</navigation>